# kidplan-fetcher

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
kidplan_fetcher/: __init__.py  cli.py
tests/: test_integration.py  test_unit.py
